--- a/Flexo/base.html.twig
+++ b/Flexo/base.html.twig
@@ -4,7 +4,8 @@
 
 {% block stylesheets %}
     {{ parent() }}
-    {% stylesheets 'bundles/canaltpmtt/css/main.css' output="" %}
+    {% stylesheets 'bundles/canaltpmtt/css/main.css'
+                    'bundles/canaltpmtt/css/layouts.css' %}
         <link rel="stylesheet" media="all" href="{{ asset_url }}?{{ assets_version }}" />
     {% endstylesheets %}
 
