--- a/METH-337_Divia_4_paves/macros.html.twig
+++ b/METH-337_Divia_4_paves/macros.html.twig
@@ -9,11 +9,10 @@
 {% macro flash_info(id, block, class, level, imgPath) %}
         <div id="flash_info_top"></div>
         <img class="flash-info" src="{{ asset(imgPath ~ 'flash_info.png') }}">
-        <div id="{{ id }}" data-block-level="{{ level }}" data-block-type="text" class="block {{ class }}">
-            {% if block %}
-                <span class="content">{{ block.content|nl2br }}</span>
-            {% endif %}
+        <div id="{{ id }}" class="{{ class }}">
+            <span class="content">Repérez la période "Anis" ou "Cassis" à consulter, grâce à la couleur du jour de votre voyage indiquée sur le "Calendrier Voyageurs"</span>
         </div>
+        <div id="flash_info_bottom"></div>
 {% endmacro %}
 
 {% macro text(id, block, level, class) %}
@@ -59,9 +58,6 @@
 
         <div class="content">{% spaceless %}
             {% if stopPoint %}
-                {% if stopPoint.getPois() is empty %}
-                    {{ 'stop_point.block.pois.empty'|trans({'%distance%':stopPoint.getPoiDistance()}, 'default') }}
-                {% endif %}
                 {% for poi in stopPoint.getPois() %}
                     {{ poi.name }}<br>
                 {% endfor %}
