--- a/METH-364_Divia_Flexo_1_pave/macros.html.twig
+++ b/METH-364_Divia_Flexo_1_pave/macros.html.twig
@@ -167,3 +167,10 @@
         {% endfor %}
     </tr>
 {% endmacro %}
+
+{% macro description(class) %}
+    <div data-block-type="text" class="{{ class }}">
+        <b>Agence Divia:</b> 16, place Darcy à Dijon<br>
+        <b>03 80 11 29 29 - www.divia.fr</b>
+    </div>
+{% endmacro %}
