Refs #METH-363 ~ Model updated.

--- a/METH-363_Divia_3_paves/macros.html.twig
+++ b/METH-363_Divia_3_paves/macros.html.twig
@@ -6,14 +6,13 @@
     </div>
 {% endmacro %}
 
-{% macro flash_info(id, block, class, level, imgPath) %}
+{% macro flash_info(id, imgPath) %}
         <div id="flash_info_top"></div>
         <img class="flash-info" src="{{ asset(imgPath ~ 'flash_info.png') }}">
-        <div id="{{ id }}" data-block-level="{{ level }}" data-block-type="text" class="block {{ class }}">
-            {% if block %}
-                <span class="content">{{ block.content|nl2br }}</span>
-            {% endif %}
+        <div id="{{ id }}">
+            <span class="content">Repérez la période "Anis" ou "Cassis" à consulter, grâce à la couleur du jour de votre voyage indiquée sur le "Calendrier Voyageurs"</span>
         </div>
+        <div id="flash_info_bottom"></div>
 {% endmacro %}
 
 {% macro text(id, block, level, class) %}
