Refs #METH-363 ~ Model updated. (left menu changed)

--- a/METH-363_Divia_3_paves/base.html.twig
+++ b/METH-363_Divia_3_paves/base.html.twig
@@ -1,6 +1,6 @@
 {% import templatePath ~ "macros.html.twig" as macros %}
 
-{% extends templatePath ~ "base_layout.html.twig" %}
+{% extends "CanalTPMttBundle:Layouts:base_layout.html.twig" %}
 
 {% block stylesheets %}
     {{ parent() }}
