Refs #METH-363 ~ Model updated.

--- a/METH-363_Divia_3_paves/divia_3_paves.html.twig
+++ b/METH-363_Divia_3_paves/divia_3_paves.html.twig
@@ -25,5 +25,6 @@
                 </div>
             </div>
         </div>
+        <img class="divia-logo" src="{{ asset(imgPath ~ 'logo.png') }}">
     </div>
 {% endblock %}
