--- a/METH-363_Divia_3_paves/base.html.twig
+++ b/METH-363_Divia_3_paves/base.html.twig
@@ -39,7 +39,7 @@
             <div id="map-wrapper" class="clearfix">
                 <div id="large-left-blocks">
                     {{ macros.img('line_map_block', attribute(timetable.blocks, 'line_map_block'), 'block line_map_img', 'route') }}
-                    {{ macros.flash_info('flash_info_block', imgPath) }}
+                    {{ macros.flash_info('flash_info_block', imgPath ~ 'flash_info.png') }}
                 </div>
                 <div id="small-right-blocks">
                     {{ macros.text('text_block_1', attribute(timetable.blocks, 'text_block_1'), 'route', 'small-block block') }}
