--- a/METH-364_Divia_Flexo_1_pave/main.css
+++ b/METH-364_Divia_Flexo_1_pave/main.css
@@ -283,6 +283,11 @@ img.flash-info {
 }
 
 #layout-1-wrapper #flash_info_block .content {
-    font-size: 10px;
+    font-size: 12px;
     font-weight: bold;
+}
+
+#layout-1-wrapper #flash_info_block{
+    float:left;
+    padding-left:0px;
 }
