Add Divia address in models

--- a/METH-364_Divia_Flexo_1_pave/macros.html.twig
+++ b/METH-364_Divia_Flexo_1_pave/macros.html.twig
@@ -40,7 +40,7 @@
 
 {% macro stop_point_code(id, stopPoint, class) %}
     <div id="{{ id }}"  class="{{ class }}">
-        <div class="title">{{'stop_point.block.code.title'|trans({}, 'default')}}</div>
+        <div class="title">Code Totem de cet arrêt :</div>
 
         <div class="content">{% spaceless %}
             {% if stopPoint %}
