--- a/METH-364_Divia_Flexo_1_pave/base.html.twig
+++ b/METH-364_Divia_Flexo_1_pave/base.html.twig
@@ -41,8 +41,8 @@
                     {{ macros.flash_info('flash_info_block', imgPath ~ 'flash_info.png') }}
                 </div>
                 <div id="small-right-blocks">
-                    {{ macros.season_validity('text_block_1', currentSeason, 'small-block') }}
-                    {{ macros.text('text_block_2', attribute(timetable.blocks, 'text_block_2'), 'route', 'small-block block') }}
+                    {{ macros.text('text_block_1', attribute(timetable.blocks, 'text_block_1'), 'route', 'small-block block') }}
+                    {{ macros.description('small-block') }}
                     {{ macros.stop_point_pois('text_block_3', stopPoint, 'small-block') }}
                     {{ macros.stop_point_code('text_block_4', stopPoint, 'small-block') }}
                 </div>
