--- a/METH-365_Divia_3_paves_proxi/base.html.twig
+++ b/METH-365_Divia_3_paves_proxi/base.html.twig
@@ -1,6 +1,6 @@
-{% import templatePath ~ "macros.html.twig" as macros %}
+{% import "CanalTPMttBundle:Layouts:macros.html.twig" as macros %}
 
-{% extends templatePath ~ "base_layout.html.twig" %}
+{% extends "CanalTPMttBundle:Layouts:base_layout.html.twig" %}
 
 {% block stylesheets %}
     {{ parent() }}
@@ -56,7 +56,7 @@
 
 {% block scripts %}
     {%
-        include templatePath ~ 'common.js.twig'
+        include "CanalTPMttBundle:Layouts:common.js.twig"
         with {
             'editable'          : editable,
             'stopPointLevel'    : stopPointLevel,
