--- a/METH-365_Divia_3_paves_proxi/divia_3_paves_proxi.html.twig
+++ b/METH-365_Divia_3_paves_proxi/divia_3_paves_proxi.html.twig
@@ -14,7 +14,7 @@
             {% if i == 3 %}
                 <div>
             {% endif %}
-            {% include templatePath ~ "timegrid.html.twig" with {'addNotes': addNotes, 'nbLines' : 8} %}
+            {% include "CanalTPMttBundle:Layouts:timegrid.html.twig" with {'addNotes': addNotes, 'nbLines' : 8} %}
             {% if i == 2 %}
                 </div>
                 <div>
