--- a/Flexo/flexo.html.twig
+++ b/Flexo/flexo.html.twig
@@ -13,12 +13,12 @@
             {% set id = 'timegrid_block_1' %}
             {% set block = attribute(timetable.blocks, id) %}
             {% set nbLines = 4 %}
-            {% include templatePath ~ "timegrid.html.twig" with {'addNotes': addNotes, 'nbLines' : nbLines} %}
+            {% include "CanalTPMttBundle:Layouts:timegrid.html.twig" with {'addNotes': addNotes, 'nbLines' : nbLines} %}
             {% set calendar = attribute(calendars, block.content) %}
             {% if calendar %}
             <div class="pad30t">
             {%
-                include templatePath ~ "notes.html.twig"
+                include "CanalTPMttBundle:Layouts:notes.html.twig"
                 with { 'notes' : calendar.notes, 'computedNotes' : notes, 'calendar' : calendar } only
             %}
             {% endif %}
