--- a/Lianes_4_paves_lianes/lianes4Timegrids.html.twig
+++ b/Lianes_4_paves_lianes/lianes4Timegrids.html.twig
@@ -15,7 +15,7 @@
             {% else %}
                 {% set nbLines = 12 %}
             {% endif %}
-            {% include templatePath ~ "timegrid.html.twig" with {'addNotes': addNotes, 'nbLines' : nbLines} %}
+            {% include "CanalTPMttBundle:Layouts:timegrid.html.twig" with {'addNotes': addNotes, 'nbLines' : nbLines} %}
         {% endfor %}
     </div>
 {% endblock %}
