--- a/METH-337_Divia_4_paves/base.html.twig
+++ b/METH-337_Divia_4_paves/base.html.twig
@@ -1,7 +1,6 @@
-{% import templatePath ~ "macros.html.twig" as macros %}
+{% import "CanalTPMttBundle:Layouts:macros.html.twig" as macros %}
 
-{% extends templatePath ~ "base_layout.html.twig" %}
-
+{% extends "CanalTPMttBundle:Layouts:base_layout.html.twig" %}
 {% block stylesheets %}
     {{ parent() }}
     {% stylesheets 'bundles/canaltpmtt/css/main.css'
@@ -52,7 +51,7 @@
 
 {% block scripts %}
     {%
-        include templatePath ~ 'common.js.twig'
+        include "CanalTPMttBundle:Layouts:common.js.twig"
         with {
             'editable'          : editable,
             'stopPointLevel'    : stopPointLevel,
