--- a/Proxi/proxi.html.twig
+++ b/Proxi/proxi.html.twig
@@ -14,7 +14,7 @@
             {% set id = 'timegrid_block_' ~ i %}
             {% set block = attribute(timetable.blocks, id) %}
             {% set nbLines = 4 %}
-            {% include templatePath ~ "timegrid.html.twig" with {'addNotes': addNotes, 'nbLines' : nbLines} %}
+            {% include "CanalTPMttBundle:Layouts:timegrid.html.twig" with {'addNotes': addNotes, 'nbLines' : nbLines} %}
         {% endfor %}
         </div>
     </div>
