--- a/layout1/layout_1.html.twig
+++ b/layout1/layout_1.html.twig
@@ -1,6 +1,22 @@
-{% import templatePath ~ "macros.html.twig" as macros %}
+{% import "CanalTPMttBundle:Layouts:macros.html.twig" as macros %}
 
-{% extends templatePath ~ "base_layout.html.twig" %}
+{% extends "CanalTPMttBundle:Layouts:base_layout.html.twig" %}
+
+{% block stylesheets %}
+    {{ parent() }}
+    {% stylesheets 'bundles/canaltpmtt/css/main.css'
+                    'bundles/canaltpmtt/css/default.css'
+                    'bundles/canaltpmtt/css/layouts.css' %}
+        <link rel="stylesheet" media="all" href="{{ asset_url }}?{{ assets_version }}" />
+    {% endstylesheets %}
+
+    <link rel="stylesheet" media="all" href="{{ asset(cssPath ~ 'main.css') }}?{{ assets_version }}" />
+
+    {% stylesheets  'bundles/canaltpmtt/css/print.css'
+                   filter='cssrewrite' output='css/full_layouts_print.css' %}
+        <link rel="stylesheet" media="print" href="{{ asset_url }}?{{ assets_version }}" />
+    {% endstylesheets %}
+{% endblock %}
 
 {% block timetable_content %}
     <div id="layout-1-wrapper" class="{% block additionnal_wrapper_class %}{% endblock %}">
@@ -52,7 +68,7 @@
                                     {{ macros.hours_thead(hours_range)}}
                                     {% if block.frequencies|length > 0 and (calendar.schedules.additional_informations is empty) %}
                                         {%
-                                            include templatePath ~ "display.html.twig"
+                                            include "CanalTPMttBundle:Layouts:display.html.twig"
                                             with { 'frequencies' : block.frequencies, 'hours_range' : hours_range }
                                         %}
                                     {% endif %}
@@ -78,7 +94,7 @@
 
 {% block scripts %}
     {%
-        include templatePath ~ "common.js.twig"
+        include "CanalTPMttBundle:Layouts:common.js.twig"
         with {
             'editable'          : editable,
             'stopPointLevel'    : stopPointLevel,
