Fix macro falsh_info

--- a/METH-337_Divia_4_paves/base.html.twig
+++ b/METH-337_Divia_4_paves/base.html.twig
@@ -33,7 +33,7 @@
             <div id="map-wrapper" class="clearfix">
                 <div id="large-left-blocks">
                     {{ macros.img('line_map_block', attribute(timetable.blocks, 'line_map_block'), 'block line_map_img', 'route') }}
-                    {{ macros.flash_info('flash_info_block', attribute(timetable.blocks, 'flash_info_block'), 'block', 'route', imgPath) }}
+                    {{ macros.flash_info('flash_info_block', imgPath ~ 'flash_info.png') }}
                 </div>
                 <div id="small-right-blocks">
                     {{ macros.text('text_block_1', attribute(timetable.blocks, 'text_block_1'), 'route', 'small-block block') }}
