--- a/METH-337_Divia_4_paves/base.html.twig
+++ b/METH-337_Divia_4_paves/base.html.twig
@@ -38,7 +38,7 @@
                 <div id="small-right-blocks">
                     {{ macros.text('text_block_1', attribute(timetable.blocks, 'text_block_1'), 'route', 'small-block block') }}
                     {{ macros.description('small-block') }}
-                    {{ macros.stop_point_pois('text_block_3', stopPoint, 'small-block') }}
+                    {{ macros.stop_point_pois('text_block_3', stopPoint, 'small-block', 'Points de vente - Relais Divia') }}
                     {{ macros.stop_point_code('text_block_4', stopPoint, 'small-block') }}
                 </div>
             </div>
