--- a/METH-364_Divia_Flexo_1_pave/base.html.twig
+++ b/METH-364_Divia_Flexo_1_pave/base.html.twig
@@ -7,9 +7,9 @@
     {% stylesheets 'bundles/canaltpmtt/css/main.css' output="" %}
         <link rel="stylesheet" media="all" href="{{ asset_url }}?{{ assets_version }}" />
     {% endstylesheets %}
-    
+
     <link rel="stylesheet" media="all" href="{{ asset(cssPath ~ 'main.css') }}?{{ assets_version }}" />
-    
+
     {% stylesheets  'bundles/canaltpmtt/css/print.css'
                    filter='cssrewrite' output='css/full_layouts_print.css' %}
         <link rel="stylesheet" media="print" href="{{ asset_url }}?{{ assets_version }}" />
@@ -43,7 +43,7 @@
                 <div id="small-right-blocks">
                     {{ macros.text('text_block_1', attribute(timetable.blocks, 'text_block_1'), 'route', 'small-block block') }}
                     {{ macros.description('small-block') }}
-                    {{ macros.stop_point_pois('text_block_3', stopPoint, 'small-block') }}
+                    {{ macros.stop_point_pois('text_block_3', stopPoint, 'small-block', 'Points de vente - Relais Divia') }}
                     {{ macros.stop_point_code('text_block_4', stopPoint, 'small-block') }}
                 </div>
             </div>
