--- a/METH-337_Divia_4_paves/base.html.twig
+++ b/METH-337_Divia_4_paves/base.html.twig
@@ -23,7 +23,7 @@
                 {{ macros.img('header_route_sign', attribute(timetable.blocks, 'header_route_sign'), 'header_route_sign_img', 'route') }}
                 <div id="direction-title-wrapper" data-block-level="route" data-auto-filled="1">
                     {% if timetable.title is defined %}
-                        {{ 'global.direction'|trans }} {{ timetable.title }}
+                        {{ timetable.title }}
                     {% endif %}
                 </div>
                 <div id="stop-point-title-wrapper" data-block-level="stop_point" data-auto-filled="1">
