--- a/METH-363_Divia_3_paves/main.css
+++ b/METH-363_Divia_3_paves/main.css
@@ -23,7 +23,7 @@
     width:100%;
 }
 #layout-1-wrapper #small-right-blocks{
-    width:255px;
+    width:355px;
 }
 #layout-main-wrapper #header #direction-title-wrapper{
     font-size:30px;
@@ -44,7 +44,7 @@
 
 #large-left-blocks {
     float:left;
-    width:825px;
+    width:727px;
 }
 
 #layout-1-wrapper #flash_info_block {
@@ -54,12 +54,12 @@
 #layout-1-wrapper #flash_info_top{
     height: 225px;
     border-bottom: 1px solid black;
-    margin-left: 36px;
-    width: 95%;
+    margin-left: 37px;
+    width: 94%;
 }
 
 #layout-1-wrapper #flash_info_bottom{
-    width:94%;
+    width:93%;
     height: 25px;
     margin-left: 44px;
     border-bottom: 1px solid black;
@@ -67,7 +67,7 @@
 
 #layout-1-wrapper #flash_info_block .content{
     font-weight: bold;
-    font-size: 12px;
+    font-size: 10.5px;
     padding-left: 30px;
 }
 
@@ -184,16 +184,19 @@ div#timegrid_block_4 {
     border:1px solid white;
     border-bottom-color:black;
     margin:5px 0;
-    height:45px;
+    height: 43px;
 }
 #layout-1-wrapper .small-block:first-child{
     margin-top: 0;
+}
+#layout-1-wrapper #text_block_3.small-block{
+    height: 88px;
 }
 #layout-1-wrapper #text_block_2.small-block{
     height: 63px;
 }
 #layout-1-wrapper #text_block_1.small-block{
-    height: 85px;
+    height: 45px;
     margin: 10px 0;
 }
 #layout-1-wrapper .small-block:last-child{
