--- a/Divia/Divia_4_paves/base.html.twig
+++ b/Divia/Divia_4_paves/base.html.twig
@@ -39,7 +39,7 @@
                     {{ macros.text('text_block_1', attribute(timetable.blocks, 'text_block_1'), 'route', 'small-block block') }}
                     {{ macros.description('small-block') }}
                     {{ macros.stop_point_pois('text_block_3', stopPoint, 'small-block', 'Points de vente - Relais Divia') }}
-                    {{ macros.stop_point_code('text_block_4', stopPoint, 'small-block') }}
+                    {{ macros.stop_point_code('text_block_4', stopPoint, 'small-block', 'Code TOTEM de cet arrêt') }}
                 </div>
             </div>
             {% block timetable_downer_content %}{% endblock %}
