--- a/Divia/Divia_Flexo_1_pave/base.html.twig
+++ b/Divia/Divia_Flexo_1_pave/base.html.twig
@@ -4,7 +4,7 @@
 
 {% block stylesheets %}
     {{ parent() }}
-    {% stylesheets 'bundles/canaltpmtt/css/main.css' %}
+    {% stylesheets 'bundles/canaltpmtt/css/main.css' output="" %}
         <link rel="stylesheet" media="all" href="{{ asset_url }}?{{ assets_version }}" />
     {% endstylesheets %}
 
@@ -37,21 +37,20 @@
             </div>
             <div id="map-wrapper" class="clearfix">
                 <div id="large-left-blocks">
-                    {{ macros.img('line_map_block', attribute(timetable.blocks, 'line_map_block'), 'block line_map_img', 'route') }}
+                    {{ macros.img('line_map_block', attribute(timetable.blocks, 'line_map_block'), 'line_map_img', 'route') }}
                     {{ macros.flash_info('flash_info_block', imgPath ~ 'flash_info.png') }}
                 </div>
                 <div id="small-right-blocks">
                     {{ macros.text('text_block_1', attribute(timetable.blocks, 'text_block_1'), 'route', 'small-block block') }}
                     {{ macros.description('small-block') }}
                     {{ macros.stop_point_pois('text_block_3', stopPoint, 'small-block', 'Points de vente - Relais Divia') }}
-                    {{ macros.stop_point_code('text_block_4', stopPoint, 'small-block') }}
+                    {{ macros.stop_point_code('text_block_4', stopPoint, 'small-block', 'Code TOTEM de cet arrêt') }}
                 </div>
             </div>
             {% block timetable_downer_content %}{% endblock %}
         </div>
-        <img class="divia-logo" src="{{ asset(imgPath ~ 'logo.png') }}">
+	<img class="divia-logo" src="{{ asset(imgPath ~ 'logo.png') }}">
     </div>
-
 {% endblock %}
 
 {% block scripts %}
